Change address and contact details

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						    <span class="text">varniyalifestyles@gmail.com</span>
 					    </div>
 					    <div class="col-md-5 pr-4 d-flex topper align-items-center text-lg-right">
-						    <span class="text">7-10 Business days delivery &amp; Free Returns</span>
+						    <span class="text">7-10 Business days delivery</span>
 					    </div>
 				    </div>
 			    </div>
